<resources>
    <string name="app_name">Behaviour</string>

    <string name="dichotomy">Dichotomy</string>
    <string name="bad">Bad</string>
    <string name="good">Good</string>
    <string name="child">Child</string>
    <string name="next">Next</string>
    <string name="manageChildren">Manage children</string>

    <string name="add_child_success">Successfully added child to database</string>
    <string name="add_child_failed">Failed to add child to database</string>

    <string name="load_children_failed">Unable to load children from database</string>

    <string name="save_record_success">Successfully saved record</string>
    <string name="save_record_failed">Failed to save record</string>

    <string name="no_behaviours_dialog">You don\'t have any behaviours setup in the database. Would you like to add the default set (you can always change them later) or start creating them now?</string>
    <string name="no_behaviours_dialog_title">No saved behaviours</string>
    <string name="no_behaviours_dialog_add_defaults">Defaults</string>
    <string name="no_behaviours_dialog_customise">Customise</string>
    <string name="to_dashboard">Back to dashboard</string>
    <string name="debug">Debug controls</string>
    <string name="add_child_title">Add a child</string>
    <string name="last_name">Last name (optional)</string>
    <string name="first_name">First name</string>
    <string name="summary_title">Summary</string>
    <string name="who_title">Who did what?</string>
    <string name="debug_add_test_data">Add test data to db</string>
    <string name="debug_clear">Clear</string>
    <string name="debug_log_children">Children</string>
    <string name="debug_log_behaviours">Behaviours</string>
    <string name="debug_log_records">Records</string>
    <string name="debug_log">Log</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="what_title">What did they do?</string>
    <string name="debug_log_messages">Log messages</string>
    <string name="add_icon_cd">Silhouette of a child</string>
    <string name="manage_title">Manage children</string>
</resources>
