<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:application="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/medium">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_title"
        android:textAppearance="@style/Title"
        android:paddingBottom="@dimen/large"
        application:layout_constraintEnd_toEndOf="parent"
        application:layout_constraintStart_toStartOf="parent"
        application:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dichotomy"
        android:textAppearance="@style/Label"
        android:paddingBottom="@dimen/medium"
        application:layout_constraintStart_toStartOf="parent"
        application:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/good"
        android:layout_width="@dimen/tile"
        android:layout_height="@dimen/tile"
        application:layout_constraintStart_toStartOf="parent"
        application:layout_constraintTop_toBottomOf="@+id/textView"
        application:srcCompat="@drawable/ic_sentiment_satisfied_white_90dp"
        android:contentDescription="@string/good" />

    <ImageView
        android:id="@+id/bad"
        android:layout_width="@dimen/tile"
        android:layout_height="@dimen/tile"
        application:layout_constraintBottom_toBottomOf="@+id/good"
        application:layout_constraintStart_toEndOf="@+id/good"
        application:srcCompat="@drawable/ic_sentiment_dissatisfied_white_90dp"
        android:contentDescription="@string/bad" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child"
        android:textAppearance="@style/Label"
        android:paddingTop="@dimen/medium"
        application:layout_constraintStart_toStartOf="parent"
        application:layout_constraintTop_toBottomOf="@+id/good" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/childrenRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        application:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        application:spanCount="@integer/childrenColumns"
        application:layout_constraintBottom_toBottomOf="@+id/next"
        application:layout_constraintEnd_toEndOf="parent"
        application:layout_constraintStart_toStartOf="parent"
        application:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:itemCount="20"
        tools:listitem="@layout/child_tile" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        application:layout_constraintBottom_toBottomOf="parent"
        application:layout_constraintEnd_toEndOf="parent"
        application:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
